--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 
-            <head>
+          <html>
+           
+           <head>
         <link rel="stylesheet" href="styles.css">
                     </head>
+
 how t enable dark mode :(
+
+
+
+</html>
