--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href="styles.css">
                     </head>
 
+                    <body>
 how t enable dark mode :(
 
-
+              </body>
 
 </html>
