--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 
-          <html>
-           
            <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="counter strike source.css">
                     </head>
 
-                    <body>
 how t enable dark mode :(
-
-              </body>
-
-</html>
