--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
+<html>
            <head>
         <link rel="stylesheet" href="counter strike source.css">
                     </head>
-
-how t enable dark mode :(
+<body></body>
+how t enable dark mode :(</body></html>
