--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
            <head>
         <link rel="stylesheet" href="counter strike source.css">
                     </head>
-<body></body>
+<body>
 how t enable dark mode :(</body></html>
