github is slow i see :/ :PPPP

--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
-<!DOCTYPE html>
-<html>
+
            <head>
         <link rel="stylesheet" href="counter strike source.css">
                     </head>
 <body>
-how t enable dark mode :(</body></html>
+    <p>
+how t enable dark mode :(
+
+
+
+
+
+
+
+
+<p>
+      the href is not updating :clueless: </body>
+
+</p>
