--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ how t enable dark mode :(
 
 
 
-
+</p>
 
 
 
 
 <p>
-      the href is not updating :clueless: </body>
+      the href is not updating :clueless: </p></body>
 
 </p>
