--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
                     </head>
 <body>
     <p>
-how t enable dark mode :(
+        
+         dark mode :)
 
 
 
 </p>
+<img src="https://media.discordapp.net/attachments/969646928574959626/1124601592193224784/1688127585196.gif">
 
-
-
-
-<p>
-      the href is not updating :clueless: </p></body>
+</body>
 
 </p>
