--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 </p>
-<img src="https://media.discordapp.net/attachments/969646928574959626/1124601592193224784/1688127585196.gif?ex=66538c99&is=66523b19&hm=3c82fcbc1488ef06bded07fcfb9278cde86910a3c1aa53dc78eecb599f5a3c8a&">
+<img src="1688127585196.gif">
 
 </body>
 
